# py-modern_environment_2025

./: .deepsource.toml  .editorconfig  .env.example  .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
src/: main.py
src/my_package/: my_module.py
